--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "eslint": "8.19.0",
     "eslint-config-next": "12.2.0",
     "prettier": "^2.8.4",
+    "prisma": "^4.11.0",
     "typescript": "4.7.4"
   }
 }
