--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "^4.11.0",
     "bootstrap": "^5.2.3",
     "next": "13.2.4",
     "react": "18.2.0",
