--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@prisma/client": "^4.11.0",
     "bootstrap": "^5.2.3",
+    "js-cookie": "^3.0.1",
     "next": "13.2.4",
     "react": "18.2.0",
     "react-bootstrap": "^2.7.2",
@@ -19,6 +20,7 @@
     "reactstrap": "^9.1.6"
   },
   "devDependencies": {
+    "@types/js-cookie": "^3.0.3",
     "@types/node": "18.0.1",
     "@types/react": "18.0.14",
     "@types/react-dom": "18.0.5",
@@ -26,6 +28,7 @@
     "eslint-config-next": "12.2.0",
     "prettier": "^2.8.4",
     "prisma": "^4.11.0",
+    "sass": "^1.59.3",
     "typescript": "4.7.4"
   }
 }
