--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-bootstrap": "^2.7.2",
     "react-bootstrap-icons": "^1.10.2",
     "react-dom": "18.2.0",
-    "reactstrap": "^9.1.6"
+    "reactstrap": "^9.1.6",
+    "swr": "^2.1.0"
   },
   "devDependencies": {
     "@types/js-cookie": "^3.0.3",
